--- a/test-output/old/Automation Test Suite/methods.html
+++ b/test-output/old/Automation Test Suite/methods.html
@@ -1,28 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:06:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierBankingTest.setUp()[pri:0, instance:testcases.CarrierBankingTest@396e2f39]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:06:40</td>   <td>11821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.loginCarrier(java.lang.String, java.lang.String)[pri:1, instance:testcases.CarrierBankingTest@396e2f39]">loginCarrier</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:06:46</td>   <td>17321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierAddNewBusinessBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:testcases.CarrierBankingTest@396e2f39]">carrierAddNewBusinessBankAccount</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:07:02</td>   <td>33281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierBusinessAccountSetdefault()[pri:3, instance:testcases.CarrierBankingTest@396e2f39]">carrierBusinessAccountSetdefault</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:07:21</td>   <td>52658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierBusinessRemoveBankAccount()[pri:4, instance:testcases.CarrierBankingTest@396e2f39]">carrierBusinessRemoveBankAccount</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:07:26</td>   <td>57976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierAddNewPersonalCheckingBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:5, instance:testcases.CarrierBankingTest@396e2f39]">carrierAddNewPersonalCheckingBankAccount</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:07:39</td>   <td>70685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalCheckingAccountSetdefault()[pri:6, instance:testcases.CarrierBankingTest@396e2f39]">carrierPersonalCheckingAccountSetdefault</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:07:57</td>   <td>89107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalCheckingRemoveBankAccount()[pri:7, instance:testcases.CarrierBankingTest@396e2f39]">carrierPersonalCheckingRemoveBankAccount</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:08:03</td>   <td>94499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierAddNewPersonalSavingsBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:8, instance:testcases.CarrierBankingTest@396e2f39]">carrierAddNewPersonalSavingsBankAccount</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:08:15</td>   <td>107109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalSavingsAccountSetdefault()[pri:9, instance:testcases.CarrierBankingTest@396e2f39]">carrierPersonalSavingsAccountSetdefault</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/05/30 18:08:34</td>   <td>125760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalSavingsRemoveBankAccount()[pri:10, instance:testcases.CarrierBankingTest@396e2f39]">carrierPersonalSavingsRemoveBankAccount</td> 
-  <td>main@1607305514</td>   <td></td> </tr>
-<tr bgcolor="9273a8">  <td>18/05/30 18:08:39</td>   <td>130900</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierBankingTest@396e2f39]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1607305514</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:28:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierBankingTest.setUp()[pri:0, instance:testcases.CarrierBankingTest@3891771e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:28:41</td>   <td>14042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.loginCarrier(java.lang.String, java.lang.String)[pri:1, instance:testcases.CarrierBankingTest@3891771e]">loginCarrier</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:28:56</td>   <td>29077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierAddNewBusinessBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:testcases.CarrierBankingTest@3891771e]">carrierAddNewBusinessBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:29:12</td>   <td>44505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierBusinessAccountSetdefault()[pri:3, instance:testcases.CarrierBankingTest@3891771e]">carrierBusinessAccountSetdefault</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:29:31</td>   <td>63588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierBusinessRemoveBankAccount()[pri:4, instance:testcases.CarrierBankingTest@3891771e]">carrierBusinessRemoveBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:29:36</td>   <td>68815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierAddNewPersonalCheckingBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:5, instance:testcases.CarrierBankingTest@3891771e]">carrierAddNewPersonalCheckingBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:29:48</td>   <td>81109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalCheckingAccountSetdefault()[pri:6, instance:testcases.CarrierBankingTest@3891771e]">carrierPersonalCheckingAccountSetdefault</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:30:08</td>   <td>100399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalCheckingRemoveBankAccount()[pri:7, instance:testcases.CarrierBankingTest@3891771e]">carrierPersonalCheckingRemoveBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:30:13</td>   <td>105610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierAddNewPersonalSavingsBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:8, instance:testcases.CarrierBankingTest@3891771e]">carrierAddNewPersonalSavingsBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:30:25</td>   <td>117877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalSavingsAccountSetdefault()[pri:9, instance:testcases.CarrierBankingTest@3891771e]">carrierPersonalSavingsAccountSetdefault</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/05/31 17:30:46</td>   <td>138485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierBankingTest.carrierPersonalSavingsRemoveBankAccount()[pri:10, instance:testcases.CarrierBankingTest@3891771e]">carrierPersonalSavingsRemoveBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>18/05/31 17:30:51</td>   <td>143632</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierBankingTest@3891771e]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:30:52</td>   <td>144407</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBankingTest.setUp()[pri:0, instance:testcases.BrokerBankingTest@78ac1102]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:31:06</td>   <td>158357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerLogin(java.lang.String, java.lang.String)[pri:11, instance:testcases.BrokerBankingTest@78ac1102]">brokerLogin</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:31:13</td>   <td>165354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerAddNewBusinessBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:12, instance:testcases.BrokerBankingTest@78ac1102]">brokerAddNewBusinessBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:31:27</td>   <td>179856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.verifyBrokerBusinessBankAccount(java.lang.String, java.lang.String)[pri:13, instance:testcases.BrokerBankingTest@78ac1102]">verifyBrokerBusinessBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:32:12</td>   <td>224276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerBusinessBankAccountSetdefault()[pri:14, instance:testcases.BrokerBankingTest@78ac1102]">brokerBusinessBankAccountSetdefault</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:32:39</td>   <td>252084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerBusinessRemoveBankAccount()[pri:15, instance:testcases.BrokerBankingTest@78ac1102]">brokerBusinessRemoveBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:32:47</td>   <td>259273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerAddNewPersonalCheckingBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:16, instance:testcases.BrokerBankingTest@78ac1102]">brokerAddNewPersonalCheckingBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:32:58</td>   <td>270568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.verifyBrokerPersonalCheckingBankAccount(java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerBankingTest@78ac1102]">verifyBrokerPersonalCheckingBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:33:34</td>   <td>306451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerPersonalCheckingBankAccountSetdefault()[pri:18, instance:testcases.BrokerBankingTest@78ac1102]">brokerPersonalCheckingBankAccountSetdefault</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:34:03</td>   <td>335789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerRemovePersonalCheckingBankAccount()[pri:19, instance:testcases.BrokerBankingTest@78ac1102]">brokerRemovePersonalCheckingBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:34:10</td>   <td>342964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerAddNewPersonalSavingsBankAccount(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:20, instance:testcases.BrokerBankingTest@78ac1102]">brokerAddNewPersonalSavingsBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:34:22</td>   <td>354273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.verifyBrokerPersonalSavingsBankAccount(java.lang.String, java.lang.String)[pri:21, instance:testcases.BrokerBankingTest@78ac1102]">verifyBrokerPersonalSavingsBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:35:28</td>   <td>420793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerPersonalSavingsBankAccountSetdefault()[pri:22, instance:testcases.BrokerBankingTest@78ac1102]">brokerPersonalSavingsBankAccountSetdefault</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/05/31 17:35:57</td>   <td>449258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBankingTest.brokerRemovePersonalSavingsBankAccount()[pri:23, instance:testcases.BrokerBankingTest@78ac1102]">brokerRemovePersonalSavingsBankAccount</td> 
+  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>18/05/31 17:36:04</td>   <td>456369</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBankingTest@78ac1102]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
 </table>
