--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a9d7d">  <td>18/05/22 18:05:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ShipperAdvancePaymentTest.setUp()[pri:0, instance:testcases.ShipperAdvancePaymentTest@22eeefeb]">&gt;&gt;setUp</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerAvailableCreditTabTest.setUp()[pri:0, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/05/22 18:05:22</td>   <td>12412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShipperAdvancePaymentTest.loginBroker(java.lang.String, java.lang.String)[pri:12, instance:testcases.ShipperAdvancePaymentTest@22eeefeb]">loginBroker</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:45</td>   <td>11780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.loginBrokerTest(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">loginBrokerTest</td> 
   <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/05/22 18:05:26</td>   <td>15871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShipperAdvancePaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:16, instance:testcases.ShipperAdvancePaymentTest@22eeefeb]">brokernewPayment</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:50</td>   <td>16929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.ClickBrokerAvailableCreditTabTest()[pri:2, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">ClickBrokerAvailableCreditTabTest</td> 
   <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/05/22 18:05:39</td>   <td>29290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShipperAdvancePaymentTest.loginTest(java.lang.String, java.lang.String)[pri:17, instance:testcases.ShipperAdvancePaymentTest@22eeefeb]">loginTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:54</td>   <td>20364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.RequestAdditionalCreditButtonTest()[pri:3, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">RequestAdditionalCreditButtonTest</td> 
   <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="96b1f3">  <td>18/05/22 18:05:48</td>   <td>37783</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.ShipperAdvancePaymentTest@22eeefeb]">&lt;&lt;quit</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:56</td>   <td>22843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.RequestAdditionalCreditPopUpTest()[pri:4, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">RequestAdditionalCreditPopUpTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/08 16:42:02</td>   <td>28854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.BrokerOutlookTest(java.lang.String, java.lang.String)[pri:5, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">BrokerOutlookTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="96b1f3">  <td>18/06/08 16:42:47</td>   <td>74058</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">&lt;&lt;quit</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2074185499</td>   <td></td> </tr>
 </table>
